--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.17.2",
     "html-webpack-plugin": "^2.29.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-redux": "^4.0.8",
+    "redux-thunk": "^2.2.0",
     "rxjs": "^5.4.2",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.6.1"
